<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/DriverButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="132dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="132dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="Driver"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/RiderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/RiderButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="308dp"
        android:layout_marginEnd="132dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="132dp"
        android:layout_marginStart="8dp"
        android:text="Rider"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>